@@ -13,7 +13,6 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Queue extends BaseButton implements DQueue {
 
@@ -47,7 +46,7 @@ public class Queue extends BaseButton implements DQueue {
     @NotNull
     @Override
     public List<Player> getQueuedPlayers() {
-        return Collections.unmodifiableList(players.stream().sequential().map(QueueEntry::getPlayer).collect(Collectors.toList()));
+        return players.stream().map(QueueEntry::getPlayer).toList();
     }
 
     void addPlayer(final QueueEntry entry) {
